--- a/index.html
+++ b/index.html
@@ -8,25 +8,22 @@
 <link href="main.css" rel="stylesheet" />
 	<script src="jquery.min.js"></script>
     <script src="typed.min.js" type="text/javascript"></script>
-    <meta content='CMS' name='generator'/>
+    <meta content='Website' name='generator'/>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <meta content='noindex' name='robots'/>
 <meta content='noindex,nofollow' name='robots'/>
 <meta content='noindex,nofollow' name='robots'/>
-<meta content='cms،tech،youtube،all،animation،facebook،twiiter،media،' name='keywords'/>
-<meta content='http://cms.anime4tube.com/index.html' property='og:url'/>
-<meta content='ELD-CMS' property='og:site_name'/>
+<meta content='cms،tech،youtube،all،animation،facebook،twitter،media،' name='keywords'/>
+<meta content='http://pro-devel.github.io' property='og:url'/>
+<meta content='El3abth-Last Github' property='og:site_name'/>
 <meta content='Index' property='og:title'/>
 <meta content='website' property='og:type'/>
-<meta content='http://i.epvpimg.com/QCvrd.jpg' property='og:image'/>
+<meta content='https://www.filepicker.io/api/file/LMyHEMReT2a6LzSgRknw' property='og:image'/>
 <link rel="shortcut icon" href="http://cms.anime4tube.com/favicon.ico" type="image/x-icon">
 <link rel="icon" href="http://cms.anime4tube.com/favicon.ico" type="image/x-icon">
 <link href='https://plus.google.com/+El3abthLastPro-Fun/posts' rel='publisher'/>
 <link href='https://plus.google.com/+El3abthLastPro-Fun/about' rel='author'/>
 <link href='https://plus.google.com/+El3abthLastPro-Fun' rel='me'/>
-<meta name="google-site-verification" content="8iejwQ02JeaAFrHCXofL9bn0r5oBDvsLnJSMcq94y7o" />
-<meta name="msvalidate.01" content="4BDCB6A30AAFDC53BC2F94538A7109EC" />
-<meta content='ALEXA-VERIFY-CODE' name='alexaVerifyID'/>
 <meta content='Cairo, Egypt' name='geo.placename'/>
 <meta content='El3abth-Last' name='Author'/>
 <meta content='general' name='rating'/>
