--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	<title>Title</title>
+	<title>El3abth-Last</title>
 
     <link href="style.css" rel="stylesheet" />
 <link href="main.css" rel="stylesheet" />
