--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 <meta content='cms،tech،youtube،all،animation،facebook،twitter،media،' name='keywords'/>
 <meta content='http://pro-devel.github.io' property='og:url'/>
 <meta content='El3abth-Last Github' property='og:site_name'/>
-<meta content='Index' property='og:title'/>
+<meta content='El3abth-Last Github' property='og:title'/>
 <meta content='website' property='og:type'/>
-<meta content='https://www.filepicker.io/api/file/LMyHEMReT2a6LzSgRknw' property='og:image'/>
+<meta content='http://i.epvpimg.com/p3Tmg.png' property='og:image'/>
+<meta property="og:description" content="Github Pages Index Created By El3abth-Last" />
 <link rel="shortcut icon" href="http://cms.anime4tube.com/favicon.ico" type="image/x-icon">
 <link rel="icon" href="http://cms.anime4tube.com/favicon.ico" type="image/x-icon">
 <link href='https://plus.google.com/+El3abthLastPro-Fun/posts' rel='publisher'/>
