--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pro Developer | Landing page</title>
+	<title>title</title>
 	<link rel="stylesheet" href="css/file.css">
 	<link rel="stylesheet" href="css/file2.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/skill.bars.jquery.js"></script>
+	<script src="js/typed.min.js"></script>
+	    <meta content='Website' name='generator'/>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+<meta content='noindex' name='robots'/>
+<meta content='noindex,nofollow' name='robots'/>
+<meta content='noindex,nofollow' name='robots'/>
+<meta content='cms،tech،youtube،all،animation،facebook،twitter،media،' name='keywords'/>
+<meta content='http://pro-devel.github.io' property='og:url'/>
+<meta content='El3abth-Last Github' property='og:site_name'/>
+<meta content='El3abth-Last Github' property='og:title'/>
+<meta content='website' property='og:type'/>
+<meta content='http://i.epvpimg.com/p3Tmg.png' property='og:image'/>
+<meta property="og:description" content="Github Pages Index Created By El3abth-Last" />
+<link rel="shortcut icon" href="http://cms.anime4tube.com/favicon.ico" type="image/x-icon">
+<link rel="icon" href="http://cms.anime4tube.com/favicon.ico" type="image/x-icon">
+<link href='https://plus.google.com/+El3abthLastPro-Fun/posts' rel='publisher'/>
+<link href='https://plus.google.com/+El3abthLastPro-Fun/about' rel='author'/>
+<link href='https://plus.google.com/+El3abthLastPro-Fun' rel='me'/>
+<meta content='Cairo, Egypt' name='geo.placename'/>
+<meta content='El3abth-Last' name='Author'/>
+<meta content='general' name='rating'/>
+<meta content='Egypt' name='geo.country'/>
+<meta content='ar_AR' property='og:locale'/>
+<meta content='en_AR' property='og:locale:alternate'/>
+<meta content='https://www.facebook.com/pro.devel' property='article:author'/>
+<meta content='https://www.facebook.com/pro.devel' property='article:publisher'/>
+<meta content='FACEBOOK-APP-ID' property='fb:app_id'/>
+<meta content='FACEBOOK-ADMIN-ID' property='fb:admins'/>
+<meta content='@Pro_Devel' name='twitter:site'/>
+<meta content='@Pro_Devel' name='twitter:creator'/>
+<meta content='120' http-equiv='refresh'/>
+    <meta name="description" content="A simple CMS Designed & Created By El3abth-Last">
 </head>
 <body>
 <script>
@@ -23,6 +55,16 @@ $(document).ready(function(){
 });
 
 </script>
+    	<script>
+	$(function(){
+
+		$("#typed").typed({
+			strings: ["Welcome to main page", "You want to view,clone,edit ?", "To find repositories you come for", "Visit Github profile <a target='_blank' href='https://github.com/pro-devel'>Here</a>"],
+			typeSpeed: 50,
+		});
+
+	});
+	</script>
 <div class="fixednav">
 	<ul style="padding-left: 0px;" id="ule">
 		<li><a href="#main">Main</a></li>
@@ -33,8 +75,9 @@ $(document).ready(function(){
 </div>
 <section class="intro">  
   <div class="content" id="main">
-    <h1>Welcome to "<span>P</span>ro <span>D</span>eveloper" main page</h1>
-    <p>you can check my skills in About tab :)</p>
+    <h1>Welcome to "<span>P</span>ro <span>D</span>eveloper" main page</h1><br>
+    <span id="typed"></span><br>
+    <span style="color:#27ae60;">you can check my skills in About tab :)</span>
  </div>
 </section>
 
