--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>title</title>
+	<title>Pro developer | Main page</title>
 	<link rel="stylesheet" href="css/file.css">
 	<link rel="stylesheet" href="css/file2.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
