--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
 <script>
 
-$("a.about").click(function(){
+$("a.about").on("click", function(){
 	
 	$('.skillbar').skillBars({
 		from: 0,
