--- a/index.html
+++ b/index.html
@@ -42,11 +42,7 @@
 </head>
 <body>
 <script>
-
-$("a.about").on("click", function(){
-$('.demo').simpleSkillbar({});	
-});
-
+$('.demo').simpleSkillbar();
 </script>
     	<script>
 	$(function(){
