--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 	<link rel="stylesheet" href="css/file.css">
 	<link rel="stylesheet" href="css/file2.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="js/simple-skillbar.js"></script>
 	<script src="js/typed.min.js"></script>
 	    <meta content='Website' name='generator'/>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
@@ -41,9 +39,6 @@
     <meta name="description" content="A simple CMS Designed & Created By El3abth-Last">
 </head>
 <body>
-<script>
-$('.demo').simpleSkillbar();
-</script>
     	<script>
 	$(function(){
 
@@ -94,6 +89,11 @@ $('.demo').simpleSkillbar();
 	<a href="http://www.github.com/pro-devel" class="soc-git"><i class="fa fa-github fa-3x"></i>Github</a>
  </div>
 </section>
-
+	
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+	<script src="js/simple-skillbar.js"></script>
+	<script>
+$('.demo').simpleSkillbar();
+</script>
 </body>
 </html>
