--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<link rel="stylesheet" href="css/file.css">
 	<link rel="stylesheet" href="css/file2.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
-	<script src="js/typed.min.js"></script>
-	    <meta content='Website' name='generator'/>
+		    <meta content='Website' name='generator'/>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <meta content='noindex' name='robots'/>
 <meta content='noindex,nofollow' name='robots'/>
@@ -71,11 +70,11 @@
 <br><h2 style="color: darkgrey;">I'm a professional Front-End Developer (UI Developer)<br>My Skills (in web development) :</h2>
 
  <br>
-<div id="skill1" class="demo" data-width="80" data-background="#FFC107">JavaScript (80%)</div>
-<div id="skill2" class="demo" data-width="90" data-background="#FF5722">HTML5+XML (90%)</div>
-<div id="skill3" class="demo" data-width="70" data-background="#2196F3">CSS+CSS3 (70%)</div>
-<div id="skill4" class="demo" data-width="50" data-background="#F44336">AngularJS (50%)</div>
-<div id="skill5" class="demo" data-width="80" data-background="#3B5998">ReactJS + React Native (80%)</div>
+<div id="skill1" class="demo" data-width="98" data-background="#FFC107">JavaScript (98%)</div><br>
+<div id="skill2" class="demo" data-width="90" data-background="#FF5722">HTML5+XML (90%)</div><br>
+<div id="skill3" class="demo" data-width="70" data-background="#2196F3">CSS+CSS3 (70%)</div><br>
+<div id="skill4" class="demo" data-width="50" data-background="#F44336">AngularJS (50%)</div><br>
+<div id="skill5" class="demo" data-width="20" data-background="#3B5998">ReactJS + React Native (20%)</div>
 
   </div>
 </section>
@@ -89,8 +88,8 @@
 	<a href="http://www.github.com/pro-devel" class="soc-git"><i class="fa fa-github fa-3x"></i>Github</a>
  </div>
 </section>
-	
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="js/typed.min.js"></script>
 	<script src="js/simple-skillbar.js"></script>
 	<script>
 $('.demo').simpleSkillbar();
