--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="css/file.css">
 	<link rel="stylesheet" href="css/file2.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
-		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+		<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/typed.min.js"></script>
 		    <meta content='Website' name='generator'/>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
