--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 </section>
 	<script src="js/simple-skillbar.js"></script>
 	<script>
-$('.demo').simpleSkillbar();
+		$('a.about').on("click", function() {
+		$('.demo').simpleSkillbar();
+		});
 </script>
 </body>
 </html>
