--- a/index.html
+++ b/index.html
@@ -96,5 +96,9 @@
 		$('.demo').simpleSkillbar();
 		});
 </script>
+	<script type="text/javascript">
+  function createKeenWebAutoCollector(){window.keenWebAutoCollector=window.KeenWebAutoCollector.create({projectId:'59ba3e63c9e77c00015e71be',writeKey:'3A185CF54AFADCF786B2E959DEA86649DECB4821F3EE3468122A5456B971E1E8D2239E7DDE4E3735C5A43122D5470E066E4429E7E50D32B7FDDEC173C1EBB0C731C1E03783352846A0C36F5452B538AA22B4BDE6779C4CD5EE20A95779830BB9',onloadCallbacks:window.keenWebAutoCollector.onloadCallbacks}),window.keenWebAutoCollector.loaded()}function initKeenWebAutoCollector(){window.keenWebAutoCollector.domReady()?window.createKeenWebAutoCollector():document.addEventListener("readystatechange",function(){window.keenWebAutoCollector.domReady()&&window.createKeenWebAutoCollector()})}window.keenWebAutoCollector={onloadCallbacks:[],onload:function(a){this.onloadCallbacks.push(a)},domReady:function(){return["ready","complete"].indexOf(document.readyState)>-1}};
+</script>
+<script async type="text/javascript" src="https://d26b395fwzu5fz.cloudfront.net/keen-web-autocollector-1.0.8.min.js" onload="initKeenWebAutoCollector()"></script>
 </body>
 </html>
