--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
 	<a href="http://www.facebook.com/pro.devel" class="soc-face"><i class="fa fa-facebook fa-3x"></i>Facebook</a>
 	<a href="http://www.twitter.com/Pro_Devel" class="soc-twit"><i class="fa fa-twitter fa-3x"></i>Twitter</a>
 	<a href="https://plus.google.com/+El3abthLastPro-Fun" class="soc-gp"><i class="fa fa-google-plus fa-3x"></i>Google Plus</a>
-	<a href="http://www.github.com/pro-devel" class="soc-git"><i class="fa fa-github fa-3x"></i>Github</a>
+	<a href="http://www.github.com/pro-devel" class="soc-git"><i class="fa fa-github fa-3x"></i>Github</a><br>
+	  <div id="code-sponsor-widget"></div>
+<script type="text/javascript"
+        src="https://app.codesponsor.io/scripts/sqITA31ZPT5lpV2vTZDJFg?theme=light"></script>
  </div>
 </section>
 	<script src="js/simple-skillbar.js"></script>
