Switching from terminal to Inline text and adding a background

--- a/index.html
+++ b/index.html
@@ -3,24 +3,17 @@
 <head>
 	<title>Welcome To SaberHosneyDev.ME</title>
 	<link href="css/style.css" rel="stylesheet" />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+	<link rel="stylesheet" href="css/all.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script src="js/typed.js"></script>
 	<script src="js/java.js"></script>
 </head>
 <body>
-	<div class="terminal">
-		<div class="header">
-			<div class="controllers">
-				<div class="controller" style="background: red;"></div>
-				<div class="controller" style="background: yellow;"></div>
-				<div class="controller" style="background: lightgreen;"></div>
-			</div>
-			<div class="text">Saber - Bash - 80x24</div>
-		</div>
-		<div class="body">
-			<div id="start"></div>
-		</div>
+	<div class="content">
+		<h1 class="intro">Hi I'm Saber Hosney</h1>
+		<h2 class="mainContent">I'm a <span  class="key" id="key"></span></h2>
+		<!-- <h2 class="secondContent">& I love to <span class="secondKey" id="secondKey"></span></h2> -->
 	</div>
 	<div class="social">
 		<div class="field">
