--- a/index.html
+++ b/index.html
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome To SaberHosneyDev.ME</title>
-	<link href="css/style.css" rel="stylesheet" />
-	<link rel="stylesheet" href="css/all.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<script type="text/javascript" src="js/jquery.js"></script>
-	<script src="js/typed.js"></script>
-	<script src="js/java.js"></script>
+	<title>Saber Hosney - About</title>
+	<link rel="stylesheet" href="./css/about.css">
 </head>
 <body>
-	<div class="content">
-		<h1 class="intro">Hi I'm Saber Hosney</h1>
-		<h2 class="mainContent">I'm a <span  class="key" id="key"></span></h2>
-		<!-- <h2 class="secondContent">& I love to <span class="secondKey" id="secondKey"></span></h2> -->
+	<!-- Navigation links and logo -->
+	<p class="heading">
+		<span class="current">SaberHosneyDev</span>
+	</p>
+
+	<div class="bio">
+		<p class="title title__left">Biography</p>
+		<div class="content">
+			<img src="./images/about_me.svg" alt="" class="bio_image">
+			<div class="bio_text">
+				<p class="bio_text__header">Once upon a time, there was a ... <br>
+					<p class="bio_text__content">
+						That was a great starting sentence, wasn't it ?
+						Anyway, my name is <span class="bold">Saber Hosney</span><br>
+						I'm a web developer, I usually write code for fun sake and sometimes for learning purposes.<br><br>
+						I have interest in <span class="underline bold">PI Constant<span class="tooltip">3.141592</span></span> and AI and how it works.<br><br>
+						For some reason that I don't know, I had interest in <span class="underline bold">Poincare Conjecture<span class="tooltip">Check this <a target="_blank" href="https://www.facebook.com/saberhosneydev/videos/1244167939102241/" style="color: lightblue;">post </a>for more info</span></span>.<br><br>
+						I'm currently enrolled in ComputerScience degree, something that may be worth to mention : I passed the 10k rule !<br>
+						one last thing : I hate c++ .
+					</p>
+				</p>
+			</div>
+		</div>
+		<p class="title title__right">Where to find me</p>
+		<div class="links">
+			<div class="links_left">
+				<img src="./images/github.svg" alt="" class="links_left__image">
+				<p>I believe in open source,
+					that's why all my projects resides on Github. You can check 'em all<a href="https://github.com/saberhosneydev" target="_blank" class="underline">@SaberHosneyDev</a>
+				</p>
+			</div>
+			<div class="links_right">
+				<img src="./images/twitter.svg" alt="" class="links_right__image">
+				<p>I usually use it for supporting libraries and frameworks,
+					keep it simple , right?. I'm a cool person UwU<a href="https://twitter.com/saberhosneydev" target="_blank" class="underline">@SaberHosneyDev</a>
+				</p>
+			</div>
+		</div>
+		<p class="title title__left">Contact</p>
+		<form class="contact_form" id="contactForm" action="#" method="POST">
+			<input type="text" class="contact_input" id="name" placeholder="Your name">
+			<br><br>
+			<input type="email" class="contact_input" id="email" placeholder="Your email"><br>
+			<label class="labelData">YOUR EMAIL WILL NOT BE SHARED WITH ANYONE, I PROMISE !</label><br><br>
+			<textarea id="content" cols="30" rows="10" class="contact_textarea" placeholder="Your message"></textarea><br><br>
+			<button class="contact_button" type="submit">Send</button>
+			<label class="labelData" style="display: none;" id="labelData"></label><br><br>
+		</form>
 	</div>
-	<div class="social">
-		<div class="field">
-			<a href="https://www.facebook.com/saberhosneydev" target="_blank" ><i class="fab fa-3x fa-facebook"></i></a>
-		</div>
-		<div class="field">
-			<a href="https://twitter.com/SaberHosneyDev" target="_blank" ><i class="fab fa-3x fa-twitter"></i></a>
-		</div>
-		<div class="field">
-			<a href="https://www.instagram.com/SaberHosneyDev/" target="_blank" ><i class="fab fa-3x fa-instagram"></i></a>
-		</div>
-		<div class="field">
-			<a href="https://github.com/SaberHosneyDev" target="_blank" ><i class="fab fa-3x fa-github"></i></a>
-		</div>
-		<div class="field">
-			<a href="https://www.twitch.tv/SaberHosneyDev" target="_blank" ><i class="fab fa-3x fa-twitch"></i></a>
-		</div>
-		<div class="field">
-			<a href="https://www.youtube.com/SaberHosneyDev" target="_blank" ><i class="fab fa-3x fa-youtube"></i></a>
-		</div>
-		<div class="field">
-			<a href="https://www.reddit.com/user/SaberHosneyDev" target="_blank" ><i class="fab fa-3x fa-reddit"></i></a>
-		</div>
-	</div>
-	<div class="footer" id="mouseOver">
-		<p>Made with <i class="fa fa-heart love"></i> by Saber Hosney</p>
-	</div>
+	<script src="./js/email.min.js"></script>
+	<script src="./js/client.js"></script>
 </body>
 </html>
