--- a/v3/index.html
+++ b/v3/index.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Title</title>
+	<title>Welcome To SaberHosneyDev.ME</title>
 	<link href="css/style.css" rel="stylesheet" />
-  <script type="text/javascript" src="js/jquery.js"></script>
+	<link rel="stylesheet" href="css/all.css">
+	<link rel="stylesheet" href="css/animate.css">
+	<script type="text/javascript" src="js/jquery.js"></script>
 	<script src="js/typed.js"></script>
 	<script src="js/java.js"></script>
 </head>
 <body>
-<div class="init">
-  <span id="start"></span>
-</div>
-
-<div class="mainContent">
-  <span id="content"></span>
-</div>
-
-<div class="socialLinks">
-  
-</div>
+	<div class="content">
+		<h1 class="intro">Hi I'm Saber Hosney</h1>
+		<h2 class="mainContent">I'm a <span  class="key" id="key"></span></h2>
+		<!-- <h2 class="secondContent">& I love to <span class="secondKey" id="secondKey"></span></h2> -->
+	</div>
+	<div class="social">
+		<div class="field">
+			<a href="https://www.facebook.com/saberhosneydev" target="_blank" ><i class="fab fa-3x fa-facebook"></i></a>
+		</div>
+		<div class="field">
+			<a href="https://twitter.com/SaberHosneyDev" target="_blank" ><i class="fab fa-3x fa-twitter"></i></a>
+		</div>
+		<div class="field">
+			<a href="https://www.instagram.com/SaberHosneyDev/" target="_blank" ><i class="fab fa-3x fa-instagram"></i></a>
+		</div>
+		<div class="field">
+			<a href="https://github.com/SaberHosneyDev" target="_blank" ><i class="fab fa-3x fa-github"></i></a>
+		</div>
+		<div class="field">
+			<a href="https://www.twitch.tv/SaberHosneyDev" target="_blank" ><i class="fab fa-3x fa-twitch"></i></a>
+		</div>
+		<div class="field">
+			<a href="https://www.youtube.com/SaberHosneyDev" target="_blank" ><i class="fab fa-3x fa-youtube"></i></a>
+		</div>
+		<div class="field">
+			<a href="https://www.reddit.com/user/SaberHosneyDev" target="_blank" ><i class="fab fa-3x fa-reddit"></i></a>
+		</div>
+	</div>
+	<div class="footer" id="mouseOver">
+		<p>Made with <i class="fa fa-heart love"></i> by Saber Hosney</p>
+	</div>
 </body>
 </html>
