--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
 <head>
 	<title>Saber Hosney - About</title>
 	<link rel="stylesheet" href="./css/about.css">
+	<!-- Primary Meta Tags -->
+	<title>Saber Hosney - About</title>
+	<meta name="title" content="Saber Hosney - About">
+	<meta name="description" content="SaberHosneyDev personal website, you can find information, tips, articles, and more !">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://shdev.codes/">
+	<meta property="og:title" content="Saber Hosney - About">
+	<meta property="og:description" content="SaberHosneyDev personal website, you can find information, tips, articles, and more !">
+	<meta property="og:image" content="./images/debuger.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://shdev.codes/">
+	<meta property="twitter:title" content="Saber Hosney - About">
+	<meta property="twitter:description" content="SaberHosneyDev personal website, you can find information, tips, articles, and more !">
+	<meta property="twitter:image" content="./images/debuger.png">
 </head>
 <body>
 	<!-- Navigation links and logo -->
