adding meta tages

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 	<meta property="og:url" content="https://shdev.codes/">
 	<meta property="og:title" content="Saber Hosney - About">
 	<meta property="og:description" content="SaberHosneyDev personal website, you can find information, tips, articles, and more !">
-	<meta property="og:image" content="./images/debuger.png">
+	<meta property="og:image" content="https://shdev.codes/images/debuger.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://shdev.codes/">
 	<meta property="twitter:title" content="Saber Hosney - About">
 	<meta property="twitter:description" content="SaberHosneyDev personal website, you can find information, tips, articles, and more !">
-	<meta property="twitter:image" content="./images/debuger.png">
+	<meta property="twitter:image" content="https://shdev.codes/images/debuger.png">
 </head>
 <body>
 	<!-- Navigation links and logo -->
