Adding required tag

--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
 	<meta property="twitter:url" content="https://shdev.codes/">
 	<meta property="twitter:title" content="Saber Hosney - About">
 	<meta property="twitter:description" content="SaberHosneyDev personal website, you can find information, tips, articles, and more !">
-	<meta property="twitter:image" content="https://shdev.codes/images/debuger.png">
-</head>
-<body>
-	<!-- Navigation links and logo -->
+	<meta property="twitter:image" content="https://shdev.codes/images/debuger.png"> </head> <body> <!-- Navigation links and logo -->
 	<p class="heading">
 		<span class="current">SaberHosneyDev</span>
 	</p>
@@ -63,11 +60,11 @@
 		</div>
 		<p class="title title__left">Contact</p>
 		<form class="contact_form" id="contactForm" action="#" method="POST">
-			<input type="text" class="contact_input" id="name" placeholder="Your name">
+			<input type="text" class="contact_input" id="name" placeholder="Your name" required>
 			<br><br>
-			<input type="email" class="contact_input" id="email" placeholder="Your email"><br>
+			<input type="email" class="contact_input" id="email" placeholder="Your email" required><br>
 			<label class="labelData">YOUR EMAIL WILL NOT BE SHARED WITH ANYONE, I PROMISE !</label><br><br>
-			<textarea id="content" cols="30" rows="10" class="contact_textarea" placeholder="Your message"></textarea><br><br>
+			<textarea id="content" cols="30" rows="10" class="contact_textarea" placeholder="Your message" required></textarea><br><br>
 			<button class="contact_button" type="submit">Send</button>
 			<label class="labelData" style="display: none;" id="labelData"></label><br><br>
 		</form>
