--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 	<meta property="twitter:url" content="https://shdev.codes/">
 	<meta property="twitter:title" content="Saber Hosney - About">
 	<meta property="twitter:description" content="SaberHosneyDev personal website, you can find information, tips, articles, and more !">
-	<meta property="twitter:image" content="https://shdev.codes/images/debuger.png"> </head> <body> <!-- Navigation links and logo -->
+	<meta property="twitter:image" content="https://shdev.codes/images/debuger.png"> 
+	<script data-ad-client="ca-pub-8479611972416975" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	</head> 
+	<body> 
+	<!-- Navigation links and logo -->
 	<p class="heading">
 		<span class="current">SaberHosneyDev</span>
 	</p>
