--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<title>Saber Hosney - About</title>
 	<link rel="stylesheet" href="./css/about.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Primary Meta Tags -->
 	<title>Saber Hosney - About</title>
 	<meta name="title" content="Saber Hosney - About">
 	<meta name="description" content="SaberHosneyDev personal website, you can find information, tips, articles, and more !">
-
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://shdev.codes/">
