adding smol change

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 	<meta property="twitter:url" content="https://shdev.codes/">
 	<meta property="twitter:title" content="Saber Hosney - About">
 	<meta property="twitter:description" content="SaberHosneyDev personal website, you can find information, tips, articles, and more !">
-	<meta property="twitter:image" content="https://shdev.codes/images/debuger.png"> 
+	<meta property="twitter:image" content="https://shdev.codes/images/debuger.png">
 	<script data-ad-client="ca-pub-8479611972416975" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	</head> 
-	<body> 
+	</head>
+	<body>
 	<!-- Navigation links and logo -->
 	<p class="heading">
 		<span class="current">SaberHosneyDev</span>
@@ -42,7 +42,7 @@
 						I have interest in <span class="underline bold">PI Constant<span class="tooltip">3.141592</span></span> and AI and how it works.<br><br>
 						For some reason that I don't know, I had interest in <span class="underline bold">Poincare Conjecture<span class="tooltip">Check this <a target="_blank" href="https://www.facebook.com/saberhosneydev/videos/1244167939102241/" style="color: lightblue;">post </a>for more info</span></span>.<br><br>
 						I'm currently enrolled in ComputerScience degree, something that may be worth to mention : I passed the 10k rule !<br>
-						one last thing : I hate c++ .
+						one last thing : I favor Java over C++ .
 					</p>
 				</p>
 			</div>
